buttons working fully, not aligned correctly

--- a/my-app/src/components/css/AdminSettingsPage.css
+++ b/my-app/src/components/css/AdminSettingsPage.css
@@ -1,6 +1,5 @@
 .accountInScrollBox{
 	list-style-type: none;
-	align-items: center;
     text-align: left;
 	margin-left: 2vw;
 }
@@ -10,34 +9,75 @@
 	text-align: left;
 	font-size: 12px;
 	margin-top: -2vh;
-	margin-left: 20px;
+	margin-left: 2vw;
 }
 
+.btn-containersAccounts{
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	height: 200px;
+	width: 250px;
+	margin-top: -23vh;
+	margin-left: 23vw;
+}
+
+.btn-approveContainer{
+	position: absolute;
+	height: 40px;
+	width: 80px;
+	margin-top: 10%;
+}
 .btn-approve{
-	position: absolute;
-	margin-top: -4vh;
+	height: 35px;
+	width: 65px;
+	margin-top: 5vh;
+	margin-left: 4vw;
 }
 
-.btn-admin{
+.btn-adminContainer{
 	position: absolute;
-	margin-top: -4vh;
+	height: 35px;
+	width: 55px;
 	margin-left: 7vw;
+	margin-top: 10%;
+}
+.btn-admin{
+	height: 35px;
+	width: 65px;
+	margin-top: 5vh;
+	margin-left: 4vw;
 }
 
+.btn-banContainer{
+	position: absolute;
+	height: 35px;
+	width: 55px;
+	margin-top: 10%;
+}
 .btn-banUser{
 	position: absolute;
-	margin-top: -4vh;
-	margin-left: 13vw;
+	height: 35px;
+	width: 65px;
+	margin-left: 2vw;
+	margin-top: 5vh;
 }
 
-.btn-delete{
+.btn-deleteContainer{
 	position: absolute;
-	margin-top: -4vh;
-	margin-left: 17.5vw;
+	height: 35px;
+	width: 55px;
+	margin-left: 170px;
+	margin-top: 10%;
+}
+.btn-delete{
+	height: 35px;
+	width: 65px;
+	margin-top: 5vh;
 }
 
 .accountInScrollBoxContainer{
-	height: 6vh;
+	height: 10vh;
 	border: 1px solid black;
 }
 
@@ -117,115 +157,14 @@
 	width: 10vw;
 }
 
-.formContainer{
-	display: flex;
-	flex-direction: column;
-	height: 10vh;
-	width: 50vw;
-	margin-top: 0vh;
-}
-
-.downloadLocationBox{
-	width: 30vw;
-	height: 4vh;
-	margin-left: 2vw;
-	font-family: Arial;
-	font-style: normal;
-	font-size: 16;
-	margin-top: 0vh;
-}
-
-.downloadContainer{
-	width: 50vw;
-	height: 10vh;
-	justify-content: left;
-	font-family: Arial Black;
-    font-style: normal;
-	margin-right: 0vw;
-	margin-left: 2vw;
-	margin-top: 2vh;
-	margin-bottom: 2vh;
-	display: flex;
-	flex-direction: row;
-}
-
-.emailInputBoxS{
-	margin-top: 0vh;
-	margin-right: 0vw;
-	margin-left: auto;
-	margin-bottom: auto;
-	margin-left: 0vw;
-	font-family: Arial;
-	font-style: normal;
-	font-size: 16;
-	width: 30vw;
-	height: 4vh;
-}
-
-.emailDownloadForm{
-	margin-top: -4vh;
-	width: 50vw;
-	margin-left: 20vw;
-}
-
-.topButtonsContainer{
-	margin-top: -18vh;
-	margin-left: 45vw;
-}
-
-.contactRequestButton{
-	font-family: Arial Black;
-    font-style: normal;
-	font-weight: 800;
-    font-size: 15px;
-    line-height: 20px;
-    width: 150px;
-    height: 50px;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-    background: #0094FF;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-	margin-top: 1vh;
-	margin-left: 1vw;
-	margin-right: 1vw
-}
-
-.editUsersButton{
-	font-family: Arial Black;
-    font-style: normal;
-	font-weight: 800;
-    font-size: 15px;
-    width: 150px;
-    height: 50px;
-    text-align: center;
-    color: #FFFFFF;
-    background: #0094FF;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-	margin-left: 1vw;
-	margin-right: 1vw;
-	margin-bottom: 0vh;
-	margin-top: 0vh;
-	justify-content: center;
-	align-items: center;
-	padding-bottom: 20px;
-}
-
 .homeButtonAdmin{
 	height: 100px;
     width: 300px;
     padding-bottom: 20px;
 }
 
-.contactRequestButton:hover, .editUsersButton:hover, .deactivateAccountButton:hover{
+.deactivateAccountButton:hover{
 	transform: scale(1.1);
-}
-
-.toggleButtonsContainer{
-	width: 20vw;
-	margin-top: 2vh;
 }
 
 .scrapeHistoryToggle{
@@ -238,29 +177,6 @@
 	width: 15vw;
 }
 
-.advancedSearchToggle{
-	height: 5vh;
-	width: 15vw;
-	border-radius: 10px;
-	border:#000000;
-}
-.advancedSearchToggleContainer{
-	width: 15vw;
-	margin-top: 1vh;
-}
-
-.emailNotifToggle{
-	height: 5vh;
-	width: 15vw;
-	border-radius: 10px;
-	border:#000000;
-}
-.emailNotifToggleContainer{
-	margin-left: 0px;
-	width: 15vw;
-	margin-top: 1vh;
-}
-
 .adminSettingsPageContent{
 	height: 100vh;
 	width: 100vw;
@@ -270,11 +186,12 @@
 .secondRowContainer{
 	display: flex;
 	flex-direction: row;
-	margin-top: 1vh;
+	position: absolute;
+	margin-top: 5vh;
 	height: 20vh;
 }
 
-.scrapeHistoryToggle:hover, .advancedSearchToggle:hover, .emailNotifToggle:hover{
+.scrapeHistoryToggle:hover{
 	transform: scale(1.1);
 }
 
@@ -298,13 +215,13 @@
 }
 
 .approveScrollingContainer{
-	position: relative;
-	height: 25vh;
-	width: 55vw;
+	position: absolute;
+	height: 200px;
+	width: 670px;
 	border: 2px solid black;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: auto;
+	margin-left: 20vw;
+	margin-right: 20vw;
+	margin-top: 20vh;
 	margin-bottom: auto;
 	display: flex;
 	flex-direction: row;
@@ -314,81 +231,25 @@
 
 .approveScrollBox{
 	flex: 1;
-	height: 25vh;
-	width: 50vw;
+	height: 200px;
+	width: 670px;
 	border: 1px solid #ccc;
 	font: 16px/26px Georgia, Garamond, Serif;
 	overflow-y: scroll;
+	overflow-x: scroll;
 }
 
 .bottomButtonsContainerA{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	margin-top: 3vh;
+	margin-top: 75vh;
 }
 
 .delAppButtonsContainer{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-}
-
-.deleteButton{
-	font-family: Arial Black;
-    font-style: normal;
-	font-weight: 800;
-    font-size: 15px;
-    line-height: 20px;
-    width: 150px;
-    height: 50px;
-    text-align: center;
-    color: #FFFFFF;
-    background: #0094FF;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-	margin-left: 1vw;
-	margin-right: 1vw;
-	margin-bottom: 0px;
-	margin-top: 1vh;
-}
-
-.approveButton{
-	font-family: Arial Black;
-    font-style: normal;
-	font-weight: 800;
-    font-size: 15px;
-    line-height: 20px;
-    width: 150px;
-    height: 50px;
-    text-align: center;
-    color: #FFFFFF;
-    background: #0094FF;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-	margin-left: 1vw;
-	margin-right: 1vw;
-	margin-bottom: 0px;
-	margin-top: 1vh;
-}
-
-.btn-ban{
-	font-family: Arial Black;
-    font-style: normal;
-	font-weight: 800;
-    font-size: 15px;
-    line-height: 20px;
-    width: 150px;
-    height: 50px;
-    text-align: center;
-    color: #FFFFFF;
-    background: #0094FF;
-    border: 1px solid #000000;
-    box-sizing: border-box;
-	margin-left: 1vw;
-	margin-right: 1vw;
-	margin-bottom: 0px;
-	margin-top: 1vh;
 }
 
 .logoutButtonContainer{
@@ -427,7 +288,7 @@
     box-sizing: border-box;
 }
 
-.saveChangesButtonContainerA{
+.btn-deactivateContainer{
 	position: absolute;
 	height: 50px;
 	width: 150px;
@@ -454,6 +315,6 @@
 	margin-left: 1vw;
 }
 
-.deleteButton:hover, .approveButton:hover, .logoutButton:hover, .btn-saveChanges:hover{
+.logoutButton:hover{
 	transform: scale(1.1);
 }
